--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Shortly</title>
-    <link rel="stylesheet" type="text/css" href="/dist/style.min.css">
-    <script src='/dist/lib.min.js'></script>
 
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-    <!-- <script src="/lib/jquery.js"></script>
-    // <script src="/lib/underscore.js"></script>
-    // <script src="/lib/backbone.js"></script>
-    // <script src="/lib/handlebars.js"></script> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/dist/style.min.css">
+    <script src='/dist/lib.min.js'></script> -->
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="/lib/jquery.js"></script>
+    <script src="/lib/underscore.js"></script>
+    <script src="/lib/backbone.js"></script>
+    <script src="/lib/handlebars.js"></script>
 
   </head>
 
